--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -94,7 +94,7 @@
     <string name="enable_alert_vibrate_title" msgid="5421032189422312508">"Діріл"</string>
     <string name="enable_alert_vibrate_summary" msgid="4733669825477146614"></string>
     <string name="override_dnd_title" msgid="5120805993144214421">"Әрдайым қатты дыбыспен ескерту"</string>
-    <string name="override_dnd_summary" msgid="9026675822792800258">"\"Мазаламау\" режимін және басқа дыбыс деңгейі параметрлерін елемеу"</string>
+    <string name="override_dnd_summary" msgid="9026675822792800258">"Мазаламау режимін және басқа дыбыс деңгейі параметрлерін елемеу"</string>
     <string name="enable_area_update_info_alerts_title" msgid="3442042268424617226">"Жергілікті жаңартылған ақпаратты тарату"</string>
     <string name="enable_area_update_info_alerts_summary" msgid="6437816607144264910">"SIM күйінде жаңарту ақпаратын көрсету"</string>
     <string name="cmas_category_heading" msgid="3923503130776640717">"Дабыл санаты:"</string>
